--- a/views/export.ejs
+++ b/views/export.ejs
@@ -9,7 +9,7 @@
 </head>
 <body>
   <form action="/export" class="user" method="get">
-    <h1>Export all task and their users</h1>
+    <h1>Export task and User</h1>
  <input type="submit" value="Export to Excel">
 </form>
 
